Read and write work for rfid scanner

--- a/stm32_rfid_scanner.ioc
+++ b/stm32_rfid_scanner.ioc
@@ -14,27 +14,31 @@ Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
+ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress,RxMode
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 ETH.PHY_Value=0
 ETH.PhyAddress=0
+ETH.RxMode=ETH_RXINTERRUPT_MODE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F429ZIT6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=ETH
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM6
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM6
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -64,17 +68,19 @@ Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin30=PG13
 Mcu.Pin31=PB3
 Mcu.Pin32=PB5
-Mcu.Pin33=PB7
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin33=PB6
+Mcu.Pin34=PB7
+Mcu.Pin35=PB9
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=37
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -83,6 +89,7 @@ MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.ETH_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -166,10 +173,14 @@ PB3.Locked=true
 PB3.Signal=GPIO_Output
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
